apps/hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello-world-service
  namespace: nginx-hello-world
spec:
  selector:
    app: nginx-hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
