apps/hello-world/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-hello-world-ingress
  namespace: nginx-hello-world
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: hello3.firefleeb.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-hello-world-service
            port:
              number: 80
  tls:
  - hosts:
    - hello3.firefleeb.com
    secretName: hello-irefleeb-com-tls
